added section nav, welcome,

--- a/bestshop mobile/bestshop_mobile/index.html
+++ b/bestshop mobile/bestshop_mobile/index.html
@@ -43,8 +43,19 @@
 
 <section class="stats">
     <h2>The most popular sales platform in country</h2>
+<div class="stats__boxes">
     <div class="circle">
-
+        <img class="stats__img" src="./images/Person.svg" alt="">
+    </div>
+    <h3>100000+</h3>
+    <p>daily entries</p>
+</div>
+    <div class="stats__boxes">
+        <div class="circle">
+            <img class="stats__img" src="./images/Eye.svg" alt="">
+        </div>
+        <h3>100000+</h3>
+        <p>daily entries</p>
     </div>
 </section>
 </body>
